@@ -26,16 +26,6 @@ void sp_create_window (SPViewWidget *vw, gboolean editable);
 /**
  *
  */
-void sp_ui_new_view (GtkWidget *widget);
-
-/**
- *
- */
-void sp_ui_new_view_preview (GtkWidget *widget);
-
-/**
- *
- */
 void sp_ui_close_view (GtkWidget *widget);
 
 /**
