@@ -1,9 +1,12 @@
 2004-03-01  Nathan Hurst <njh@mail.csse.monash.edu.au>
 
-	* src/draw-context.cpp fixed edge case in freehand tool.  added
+	* src/draw-context.cpp: Fixed edge case in freehand tool.  Added
 	comment about curve fitting.
 
 2004-03-01  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/interface.h, src/interface.cpp
+	(sp_ui_new_view, sp_ui_new_view_preview): Make static.
 
 	* src/dyna-draw-context.cpp (sp_ddc_defaults):
 	Cleanup: Use table and loop instead of copy&paste.
